--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,7 +3,7 @@ html, body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: #fefefe;
+    background-color: #f1efef;
     color: #222;
 }
 
